--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,5 +1,4 @@
 body {
-    background-color: rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 100%;
     font-family: Courier New;
@@ -23,9 +22,6 @@ body {
     height: auto;
 }
 .formDivTag {
-    width: 350px;
-    height: auto;
-    overflow: hidden;
 }
 .header {
     display: flex;
@@ -36,72 +32,326 @@ body {
     width: 120px;
     height: auto;
 }
-.container {
-    width: 95%;
-    height: 500px;
-    margin: auto;
-    margin-top: 100px;
-}
+
 .links {
     width: 15%;
     height: 500px;
     background: white;
     float: left;
 }
-.likes {
-    margin-left: 15%;
-    height: 500px;
-    background: white;
+.dragAndDropArea {
+    float: center;
+    max-width: 600px;
+    max-height: 300px;
 }
-.comments {
-    margin-left: 15%;
-    height: 500px;
-    background: white;
-}
-.formUploader {
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -250px;
-    width: 500px;
-    height: 200px;
-    border: 4px dashed #000;
-}
-.formUploader p {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    line-height: 170px;
-    color: #000000;
-}
-.formUploader input {
-    position: absolute;
-    margin: 0;
+.divPhotoDragNew {
+    max-height: 300px;
+    max-width: 300px;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    outline: none;
-    opacity: 0;
-}
-.formUploader button {
     margin: 0;
-    color: #000;
-    background: #fd6b31;
-    border: none;
-    width: 508px;
-    height: 35px;
-    margin-top: -20px;
-    margin-left: -4px;
-    border-radius: 4px;
-    border-bottom: 4px solid #fd6b31;
-    transition: all 0.2s ease;
-    outline: none;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 35%;
 }
-.formUploader button:hover {
-    background: blue;
+
+/* Add a black background color to the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #ffffff;
+    width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
     color: black;
 }
-.formUploader button:active {
-    border: 0;
+
+/* Style the search box inside the navigation bar */
+.topnav input[type="text"] {
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+}
+.photoDragNew {
+    position: relative;
+    float: center;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    border-radius: 0.3em;
+    border: #0a0a0a solid 0.2vw;
+}
+.imageModal {
+    position: relative;
+    float: center;
+    margin-left: 30%;
+    width: 300px;
+    height: auto;
+    overflow: hidden;
+    border-radius: 0.3em;
+    border: #0a0a0a solid 0.2vw;
+}
+
+.photUrlNew {
+    position: relative;
+    float: left;
+    width: 100%;
+}
+.formKeywords {
+    margin-left: 10px;
+}
+.forms {
+    margin-top: 100px;
+    margin-left: 10px;
+    float: left;
+    width: 100%;
+}
+.app {
+    width: 100%;
+}
+.formArticles {
+    margin-left: 100px;
+}
+.formBlog {
+    margin-left: 100px;
+    display: block;
+    height: 22px;
+}
+.uploadBox {
+    float: left;
+}
+.uploadDivTag {
+    margin-left: 80px;
+    margin-top: 80px;
+    width: 1000px;
+    height: 400px;
+    border: 2px dotted #fd6b31;
+    border-radius: 30px;
+    text-align: center;
+    line-height: 90px;
+    vertical-align: center;
+}
+.uploadButtonDivTag {
+    margin-top: 10px;
+}
+.textareaArticles {
+    margin-top: 10px;
+    width: 900px;
+    height: 200px;
+    width: 80%;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
+    border-color: -moz-use-text-color #ffffff #ffffff -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-size: 1em;
+    line-height: 1.4em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+    font-family: Courier New;
+}
+.titletext {
+    width: 300px;
+    height: 20px;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
+    border-color: -moz-use-text-color #ffffff #ffffff -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-family: Courier New;
+    font-size: 1em;
+    line-height: 0.6em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+}
+.descriptiontext {
+    width: 400px;
+    height: 20px;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
+    border-color: -moz-use-text-color #ffffff #ffffff -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-family: Courier New;
+    font-size: 1em;
+    line-height: 0.6em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+}
+.textareaBlog {
+    width: 1000px;
+    height: 400px;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
+    border-color: -moz-use-text-color #ffffff #ffffff -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-family: Courier New;
+    font-size: 1em;
+    line-height: 1.4em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+}
+.textareaHashtags {
+    width: 450px;
+    height: 100px;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
+    border-color: -moz-use-text-color #ffffff #ffffff -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-family: Courier New;
+    font-size: 1em;
+    line-height: 1.4em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+}
+.textareaKeywords {
+    width: 450px;
+    height: 100px;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
+    border-color: -moz-use-text-color #ffffff #ffffff -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #555555;
+    font-family: Courier New;
+    font-size: 1em;
+    line-height: 1.4em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+}
+
+textarea:focus {
+    background: none repeat scroll 0 0 #ffffff;
+    outline-width: 0;
+}
+.box {
+    background-color: white;
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    align: center;
+    overflow: hidden;
+    position: relative;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    margin-right: 3px;
+    margin-left: 3px;
+}
+.box img {
+    position: absolute;
+    left: -100%;
+    right: -100%;
+    top: -100%;
+    bottom: -100%;
+    margin: auto;
+    max-height: 200px;
+    max-width: auto;
+}
+.box:hover img {
+    opacity: 0.9;
+}
+.box:hover .details {
+    display: inline-block;
+}
+.box .details {
+    display: none;
+    background: rgba(207, 207, 211, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    font-size: 1.2rem;
+    font-family: Courier New;
+    text-align: center;
+    justify-content: center;
+}
+.buttonTag {
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    border-radius: 8px;
+    font-family: Courier New;
+}
+
+.buttonTag:hover {
+    background-color: #fd6b31;
+    color: white;
+}
+.criteria::-webkit-input-placeholder {
+    font-family: Courier New;
+}
+
+.criteria:-ms-input-placeholder {
+    font-family: Courier New;
+}
+
+.criteria:-moz-placeholder {
+    font-family: Courier New;
+}
+
+.criteria::-moz-placeholder {
+    font-family: Courier New;
 }
