--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -48,10 +48,10 @@ body {
 .dragAndDropArea {
     float: center;
     max-width: 600px;
-    max-height: 300px;
+    max-height: 600px;
 }
 .divPhotoDragNew {
-    max-height: 300px;
+    max-height: auto;
     max-width: 300px;
     padding: 0;
     margin: 0;
@@ -149,12 +149,13 @@ body {
     margin-left: 80px;
     margin-top: 80px;
     width: 1000px;
-    height: 400px;
+    height: auto;
     border: 2px dotted #fd6b31;
     border-radius: 30px;
     text-align: center;
     line-height: 90px;
     vertical-align: center;
+    padding: 25px;
 }
 .uploadButtonDivTag {
     margin-top: 10px;
